@@ -7,7 +7,7 @@ Name: GLFW
 Description: A multi-platform library for OpenGL, window and input
 Version: 3.1.1
 URL: http://www.glfw.org/
-Requires.private:  x11 xrandr xinerama xi xcursor gl
+Requires.private:  x11 xrandr xinerama xi xxf86vm xcursor gl
 Libs: -L${libdir} -lglfw3
 Libs.private:  -lrt -lm
 Cflags: -I${includedir}
