@@ -66,6 +66,7 @@
 ### Fixed Bugs in v2.6.1
 
 * Fixed pysideluxcoredemo.py sample
+* Fixed a bug in BIDIRCPU when using shadow transparency (issue #576)
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
